# dynamic-prediction-equilibria

./: .gitignore  .pylintrc  Pipfile  README.md  deck.js  deck.js.map  env_variables.sh  exampleDiscrete.vis.json  exampleIde.vis.json  exampleNash.vis.json  exampleStIde.vis.json  index.html  main.js  main.js.LICENSE.txt  main.js.map  poster.html  poster.js  poster.js.LICENSE.txt  poster.js.map  pre-commit.sh  pyproject.toml  setup.py
.github/workflows/: build_and_deploy.yml  static-analysis.yml
dpe_experiments/: pyproject.toml
dpe_experiments/src/dpe_experiments/ml/: QueueAndEdgeLoadsDataset.py  SKFullNetworkModel.py  SKNeighborhood.py  TFFullNetworkModel.py  TFNeighborhood.py  build_test_flows.py  generate_queues.py  neighboring_edges.py
dpe_experiments/src/dpe_experiments/predictors/: expanded_linear_regression_predictor.py  full_net_linear_regression_predictor.py  per_edge_linear_regression_predictor.py  sk_full_net_predictor.py  sk_neighborhood_predictor.py  tf_full_net_predictor.py  tf_neighborhood_predictor.py
dpe_experiments/src/dpe_experiments/scenarios/: anaheim_multi_com_scenario.py  anaheim_scenario.py  berlin_friedrichshain_scenario.py  evaluate_sample.py  nguyen_scenario.py  sample_scenario.py  sioux_falls_multi_com_scenario.py  sioux_falls_scenario.py
dpe_experiments/src/dpe_experiments/slide_examples/: example1.py  example3.py  example4.py
dpe_experiments/src/dpe_experiments/tokyo/: tokyo_scenario.py
dynflows/: README.md  flow_builder.py  pyproject.toml
dynflows/core/: active_edges.py  bellman_ford.py  dijkstra.py  flow_builder.py  flow_rates_collection.py  network.py
dynflows/core/predictors/: constant_predictor.py  expanded_linear_regression_predictor.py  full_net_linear_regression_predictor.py  linear_predictor.py  linear_regression_predictor.py  per_edge_linear_regression_predictor.py  sk_full_net_predictor.py  sk_neighborhood_predictor.py  tf_full_net_predictor.py  tf_neighborhood_predictor.py
dynflows/eval/: evaluate.py  evaluate_network.py  evaluate_sample.py  predicted_delay.py
dynflows/importer/: sioux_falls_importer.py  tntp_importer.py
dynflows/ml/: QueueAndEdgeLoadsDataset.py  SKFullNetworkModel.py  SKNeighborhood.py  TFFullNetworkModel.py  TFNeighborhood.py  build_test_flows.py  generate_queues.py  neighboring_edges.py
dynflows/scenarios/: anaheim_multi_com_scenario.py  anaheim_scenario.py  berlin_friedrichshain_scenario.py  nguyen_scenario.py  sample_scenario.py  sioux_falls_multi_com_scenario.py  sioux_falls_scenario.py
dynflows/slide_examples/: example1.py  example2.py  example3.py  example4.py
dynflows/src/dynflows/core/: active_edges.py  bellman_ford.py  dijkstra.py  dynamic_flow.py  flow_builder.py  flow_rates_collection.py  graph.py  network.py  predictor.py
dynflows/src/dynflows/core/predictors/: reg_linear_predictor.py  zero_predictor.py
dynflows/src/dynflows/eval/: evaluate.py  evaluate_network.py  predicted_delay.py
dynflows/src/dynflows/importer/: csv_importer.py  sioux_falls_importer.py  tntp_importer.py
dynflows/src/dynflows/utilities/: arrays.py  build_with_times.py  combine_commodities.py  demand_utils.py  file_lock.py  json_encoder.py  no_op.py  piecewise_linear.py  queues.py  right_constant.py  status_logger.py
dynflows/src/dynflows/visualization/: make_tikz_boxplot.py  to_json.py
dynflows/src/tests/: test_arrays.py  test_bellman_ford.py  test_dynamic_flow.py  test_flow_builder.py  test_interpolate.py  test_network.py  test_right_constant.py
dynflows/tokyo/: tokyo_scenario.py
dynflows/utilities/: arrays.py  combine_commodities.py  get_tn_path.py  no_op.py  piecewise_linear.py  right_constant.py
dynflows/visualization/: make_tikz_boxplot.py  to_json.py
jupyter/: DE_solver.ipynb  Replication.ipynb
latex/: model.tex  presentation.tex
latex/img/: amplitudes_decay.eps  amplitudes_proj_tt.eps  de_comparison.eps  final_tt_proj.eps  multi-link.eps  potentials.eps  (+14 more)
predictor/: Pipfile  README.md  setup.py
slides/: README.md  package-lock.json  package.json  webpack.config.js
src/: .gitignore  main.py
tests/: sample_network.py  test_dynamic_flow.py  test_flow_builder.py  test_interpolate.py  test_network.py
university-report/: .latexmkrc  README.md  computational-results.tex  dynamic-flows.tex  dynamic-prediction-equilibrium.tex  fifo-computation.tex  fifo-compute-labels.tex  fifo-cost-functions.tex  fifo-duality.tex  fifo-properties.tex  flow-computation.tex  literature.bib  report.tex  sample-graph-travel-times.tex  sioux-falls-boxplot.tex  tokyo-boxplot.tex
visualization/: package-lock.json  package.json  tsconfig.json  webpack.config.js
(+255 files in other folders)
