[tool.poetry]
name = "dynamic-prediction-equilibria"
version = "0.1.0"
description = ""
authors = ["Michael Markl <marklmichael98@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.*"
tensorflow = "^2.12.1"
torch = "^2.0.1"
click = "^8.1.3"
matplotlib = "^3.8.3"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
