[project]
name = "my_workspace"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.sources]
dynflows = { workspace = true }

[tool.uv.workspace]
members = [
    "dynflows",
    "dpe_experiments"
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
