[project]
name = "dpe_experiments"
version = "0.1.0"
description = "Computing dynamic prediction equilibria with machine-learned predictors."
authors = [
    {name = "Michael Markl", email = "marklmichael98@gmail.com"}
]
requires-python=">=3.11"

dependencies = [
    "tensorflow >= 2.14, < 3",
    "tensorflow-cpu>=2.18.0",
    "keras >= 3.14, < 4",
    "torch >= 2.0.1, < 3",
    "click >= 8.1.3, < 9",
    "matplotlib >= 3.8.3, < 4",
    "numpy >= 1.23.4, < 2",
    "scikit-learn >= 1.1.3, < 2",
    "pandas >= 2.0.0, < 3",
    "dynflows",
]

[dependency-groups]

dev = [
    "black >= 23.3.0, < 24",
    "isort >= 5.12.0, < 6",
    "pylint >= 4, < 5",
    "pytest >= 8.0.2, < 9"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
