[project]
name = "dynflows"
version = "0.1.0"
description = "A library for computing, illustrating, and evaluating dynamic flows, a.k.a. flows over time, in Vickrey's fluid queuing model mainly used in dynamic traffic assignment."
authors = [
    {name = "Michael Markl", email = "marklmichael98@gmail.com"}
]
readme = "README.md"
requires-python=">=3.11"
keywords = [ "flows over time", "dynamic traffic assignment", "scientific computing" ]

dependencies = [
    "numpy >= 1.23.4, < 2",
    "pandas >= 2.0.0, < 3"
]

[dependency-groups]
dev = [
    "matplotlib >= 3.8.3, < 4",
    "black >= 23.3.0, < 24",
    "isort >= 5.12.0, < 6",
    "pylint >= 4, < 5",
    "pytest >= 8.0.2, < 9"
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
