[project]
name = "dynflows"
version = "0.1.1"
description = "A library for computing, illustrating, and evaluating dynamic flows, a.k.a. flows over time, in Vickrey's fluid queuing model mainly used in dynamic traffic assignment."
authors = [
    {name = "Michael Markl", email = "marklmichael98@gmail.com"}
]
readme = "README.md"
requires-python=">=3.11"
keywords = [ "flows over time", "dynamic traffic assignment", "scientific computing" ]

dependencies = [
    "numpy >= 1.23.4, < 2",
    "pandas >= 2.0.0, < 3"
]

[dependency-groups]
dev = [
    "matplotlib >= 3.8.3, < 4",
    "black >= 23.3.0, < 24",
    "isort >= 5.12.0, < 6",
    "pylint >= 4, < 5",
    "pytest >= 8.0.2, < 9",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.0.260204",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
